--- a/poishadow/build.gradle
+++ b/poishadow/build.gradle
@@ -11,6 +11,7 @@ repositories {
 
 dependencies {
     implementation 'org.apache.poi:poi-ooxml:3.17'
+    implementation 'org.apache.poi:poi-scratchpad:3.2-FINAL'
     implementation 'com.fasterxml:aalto-xml:1.1.0'
 }
 
